<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:text="@string/masukan_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:text="@string/masukan_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText
        android:text="@string/masukan_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText
        android:text="@string/ulangi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_marginStart="360dp"
        style="@style/textStyle"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        style="@style/btnCustom"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>